{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 62,
  "lineage": "f596ea29-d830-4648-8035-98bab9d32010",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "ivolve",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907495299:vpc/vpc-04abf91104a6f1c30",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ee199c9105ddf0a9",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0937ffc68b1cb31e7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "ivolve"
                ]
              }
            ],
            "id": "vpc-04abf91104a6f1c30",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0577ffb4a8d52de2a",
            "owner_id": "484907495299",
            "tags": {
              "Name": "ivolve"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:484907495299:instance/i-01d72f68f335f91ed",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d72f68f335f91ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "firstKey_Ansible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-026beff52acf9d3a0",
            "private_dns": "ip-10-0-3-88.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cfbc664d9f2712f7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6a4bb4357952957",
            "tags": {
              "Name": "ivolve-web-server"
            },
            "tags_all": {
              "Name": "ivolve-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00bb33726d9163640"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet_1",
            "data.aws_vpc.ivolve"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907495299:internet-gateway/igw-0bee0f77eaa2d888c",
            "id": "igw-0bee0f77eaa2d888c",
            "owner_id": "484907495299",
            "tags": {
              "Name": "ivolve-igw"
            },
            "tags_all": {
              "Name": "ivolve-igw"
            },
            "vpc_id": "vpc-04abf91104a6f1c30"
          },
          "dependencies": [
            "data.aws_vpc.ivolve"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907495299:route-table/rtb-051db00f5b21857e7",
            "id": "rtb-051db00f5b21857e7",
            "owner_id": "484907495299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bee0f77eaa2d888c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ivolve-public-rt"
            },
            "tags_all": {
              "Name": "ivolve-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04abf91104a6f1c30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "data.aws_vpc.ivolve"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053b8d5b110a05c5b",
            "route_table_id": "rtb-051db00f5b21857e7",
            "subnet_id": "subnet-0a6a4bb4357952957"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_subnet_1",
            "data.aws_vpc.ivolve"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907495299:security-group/sg-06a9dea724aead7cc",
            "description": "Security group for database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a9dea724aead7cc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from web server",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00bb33726d9163640"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "484907495299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg"
            },
            "tags_all": {
              "Name": "database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04abf91104a6f1c30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg",
            "data.aws_vpc.ivolve"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907495299:security-group/sg-00bb33726d9163640",
            "description": "Security group for web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bb33726d9163640",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-server-sg",
            "name_prefix": "",
            "owner_id": "484907495299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-sg"
            },
            "tags_all": {
              "Name": "web-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04abf91104a6f1c30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.ivolve"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907495299:subnet/subnet-0a0edb742db8e78a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0edb742db8e78a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484907495299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ivolve-private-subnet-1"
            },
            "tags_all": {
              "Name": "ivolve-private-subnet-1"
            },
            "vpc_id": "vpc-04abf91104a6f1c30"
          },
          "dependencies": [
            "data.aws_vpc.ivolve"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907495299:subnet/subnet-0a6a4bb4357952957",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6a4bb4357952957",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484907495299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ivolve-public-subnet-1"
            },
            "tags_all": {
              "Name": "ivolve-public-subnet-1"
            },
            "vpc_id": "vpc-04abf91104a6f1c30"
          },
          "dependencies": [
            "data.aws_vpc.ivolve"
          ]
        }
      ]
    }
  ]
}